test/should_not_compile/record3.sml
val _ = { a = "A" } : { a : string, b : int };
